--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gsap": "^3.5.0",
     "node-sass": "^4.14.1",
     "particles.js": "^2.0.0",
     "react": "^16.13.1",
